# mlops-with-dagster

./: .dockerignore  .editorconfig  .gitignore  README.md  bentofile.yaml  pyproject.toml
review_classification/: __init__.py  jobs.py  service.py
review_classification/assets/: data.py  model.py
