[tool.poetry]
name = "review-classification"
version = "0.1.0"
description = "A sample model to demonstrate how to build a production ML pipeline"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
dagster = "^1.6.0"
spacy = "^3.7.2"
mlflow = "^2.9.2"
bentoml = "^1.1.11"

[tool.poetry.group.dev.dependencies]
dagster-webserver = "^1.6.0"
black = "^23.12.1"
pytest = "^7.4.4"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "review_classification"
